--- a/ProjectX/web/stylesheet/stylesheetOne.css
+++ b/ProjectX/web/stylesheet/stylesheetOne.css
@@ -10,12 +10,18 @@ and open the template in the editor.
 
 body{
     background-color: yellow;
+    text-align: center;
 }
 
 form.formOne{
     
-    background-color: white;
-    padding: 10px;
+    background-color: rgba(255,255,255,0.5);
+    padding: 20px;
+    padding-bottom: 30px;
+    width: 300px;
+    height: 200px;
+    margin: auto;
+    
 }
 
 h1{
