--- a/ProjectX/web/stylesheet/stylesheetOne.css
+++ b/ProjectX/web/stylesheet/stylesheetOne.css
@@ -9,7 +9,7 @@ and open the template in the editor.
 */
 
 body{
-    background-color: yellow;
+    background-color: rgba(255,255,0,0.3);
     text-align: center;
 }
 
