--- a/ProjectX/web/stylesheet/stylesheetOne.css
+++ b/ProjectX/web/stylesheet/stylesheetOne.css
@@ -28,11 +28,20 @@ h1.title{
     color: rosybrown;
 }
 
-header{
+header.logo{
     font-size: 10px;
     text-align: center;
     background-color: rgba(255,255,255,0.6);
     padding: 1px;
     width: 80px;
-    margin:0px 0px 0px 0px;
+    position: fixed;
+    top:10px;
+    left:15px;
+}
+
+a.login{
+    font-size: 15px;
+    position: fixed;
+    top:10px;
+    right:15px;
 }
